// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu demo -- item-disabled 1`] = `
.c1 {
  padding: 0 8px;
  margin: 0 8px;
  border-radius: 2px;
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c2 {
  padding: 0 8px;
  margin: 0 8px;
  border-radius: 2px;
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c2.c2.c2 {
  color: #cccccc;
  cursor: not-allowed;
}

.c2.c2.c2:hover {
  background: unset;
}

.c0 {
  line-height: 26px;
  font-size: 12px;
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
  border-style: none !important;
}

.c0,
.c0 .style__PopupContentWrap-ulx11w-2 {
  color: #0a1633;
  border: none;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.05),0 12px 32px -4px rgba(0,0,0,0.08),0 2px 17px -6px rgba(0,0,0,0.05);
  background: #ffffff;
}

.c0 .uc-fe-menu-item:hover,
.c0 .uc-fe-menu-submenu-title-content:hover,
.c0 .uc-fe-menu-selectall-checkbox:hover {
  background: #eaeefd;
}

.c0 .uc-fe-menu-item-selected,
.c0 .uc-fe-menu-submenu-title-selected,
.c0 .uc-fe-menu-selectall-checkbox-checked {
  color: #3860f4;
}

.c0 .uc-fe-menu-submenu-title-content-collapse {
  border-color: #d2d6ea;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 1
      </div>
      <div
        class="uc-fe-menu-item c2"
        disabled=""
      >
        Menu 2 - disabled
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 3
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 4
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu demo -- menu 1`] = `
.c24 {
  vertical-align: baseline;
}

.c18 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c18:hover {
  color: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c23 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -0.5em;
  font-size: 14px;
}

.c20 {
  padding: 0 8px;
  margin: 0 8px;
  border-radius: 2px;
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c21 {
  padding: 0 8px;
  border-radius: 2px;
  display: block;
  cursor: pointer;
}

.c22 {
  padding: 0 8px;
  padding-right: 40px;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c19 {
  line-height: 26px;
  font-size: 12px;
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
  border-style: none !important;
}

.c19,
.c19 .style__PopupContentWrap-ulx11w-2 {
  color: #0a1633;
  border: none;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.05),0 12px 32px -4px rgba(0,0,0,0.08),0 2px 17px -6px rgba(0,0,0,0.05);
  background: #ffffff;
}

.c19 .uc-fe-menu-item:hover,
.c19 .uc-fe-menu-submenu-title-content:hover,
.c19 .uc-fe-menu-selectall-checkbox:hover {
  background: #eaeefd;
}

.c19 .uc-fe-menu-item-selected,
.c19 .uc-fe-menu-submenu-title-selected,
.c19 .uc-fe-menu-selectall-checkbox-checked {
  color: #3860f4;
}

.c19 .uc-fe-menu-submenu-title-content-collapse {
  border-color: #d2d6ea;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c9 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c11 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c14 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c16 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c7 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c7:hover {
  border-color: #3357df;
}

.c7:hover .c13 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c7 .c13 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c7 .c15 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c7 .c8 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c7 .c10,
.c7 .c12 {
  line-height: 16px;
}

.c7 .c10 {
  padding-right: 20px;
}

.c7 .c12 {
  padding-left: 20px;
}

.c7 .c10 {
  display: none;
}

.c17 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c17:hover {
  border-color: #3357df;
}

.c17:hover .c13 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c17 .c13 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c17 .c15 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c17 .c8 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c17 .c10,
.c17 .c12 {
  line-height: 16px;
}

.c17 .c10 {
  padding-right: 20px;
}

.c17 .c12 {
  padding-left: 20px;
}

.c17 .c8 {
  color: #4cd964;
  border-color: #9effa5;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #edfff2;
}

.c17 .c13 {
  left: 100%;
  margin-left: -19px;
}

.c17 .c15 {
  background: #4cd964;
}

.c17 .c12 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        multiple
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c11"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        selectable
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          checked=""
          class="c17"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c11"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        showSelectAll
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c11"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        refreshMenuData
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c18"
          type="button"
        >
          refreshMenuData
        </button>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c19"
    >
      <div
        class="uc-fe-menu-item c20"
      >
        root-0-item
      </div>
      <div
        class="uc-fe-menu-item c20"
      >
        root-1-item
      </div>
      <div
        class="uc-fe-menu-item c20"
      >
        root-2-item
      </div>
      <div>
        <div>
          <div
            class="uc-fe-menu-submenu-title c21"
          >
            <div
              class="uc-fe-menu-submenu-title-content c22"
            >
              root-0-subMenu
              <i
                class="uc-fe-icon icon__caret-right c23 c24"
              />
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div
            class="uc-fe-menu-submenu-title c21"
          >
            <div
              class="uc-fe-menu-submenu-title-content c22"
            >
              root-1-subMenu
              <i
                class="uc-fe-icon icon__caret-right c23 c24"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu demo -- menu-collapse 1`] = `
.c5 {
  vertical-align: baseline;
}

.c4 {
  margin-right: 8px;
  font-size: 14px;
  vertical-align: middle;
}

.c2 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  font-size: 12px;
}

.c2:hover .c3 {
  color: #3860f4;
}

.c2 .c3 {
  line-height: 28px;
  color: #d2d6ea;
}

.c6 {
  display: inline-block;
  vertical-align: middle;
}

.c9 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -0.5em;
  font-size: 14px;
}

.c1 {
  padding: 0 8px;
  margin: 0 8px;
  border-radius: 2px;
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c7 {
  padding: 0 8px;
  border-radius: 2px;
  display: block;
  cursor: pointer;
}

.c8 {
  padding: 0 8px;
  padding-right: 40px;
  position: relative;
  border-bottom: 1px solid;
  margin: 8px 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c10 {
  padding: 0 8px;
  margin: 0 8px;
  border-radius: 2px;
  display: block;
  cursor: pointer;
}

.c0 {
  line-height: 26px;
  font-size: 12px;
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
  border-style: none !important;
}

.c0,
.c0 .style__PopupContentWrap-ulx11w-2 {
  color: #0a1633;
  border: none;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.05),0 12px 32px -4px rgba(0,0,0,0.08),0 2px 17px -6px rgba(0,0,0,0.05);
  background: #ffffff;
}

.c0 .uc-fe-menu-item:hover,
.c0 .uc-fe-menu-submenu-title-content:hover,
.c0 .uc-fe-menu-selectall-checkbox:hover {
  background: #eaeefd;
}

.c0 .uc-fe-menu-item-selected,
.c0 .uc-fe-menu-submenu-title-selected,
.c0 .uc-fe-menu-selectall-checkbox-checked {
  color: #3860f4;
}

.c0 .uc-fe-menu-submenu-title-content-collapse {
  border-color: #d2d6ea;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
          />
          <div
            class="uc-fe-checkbox-content c6"
          >
            Menu 1
          </div>
        </span>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c7"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c8"
                >
                  SubMenu 1
                  <i
                    class="uc-fe-icon icon__up c9 c5"
                  />
                </div>
              </div>
            </div>
            <div
              class=""
              open=""
            >
              <span
                class="uc-fe-menu-selectall-checkbox c10 uc-fe-checkbox c2"
              >
                <i
                  class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
                />
                <div
                  class="uc-fe-checkbox-content c6"
                >
                  全选
                </div>
              </span>
              <div
                class="uc-fe-menu-item c1"
              >
                <span
                  class="uc-fe-checkbox c2"
                >
                  <i
                    class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
                  />
                  <div
                    class="uc-fe-checkbox-content c6"
                  >
                    Menu 1
                  </div>
                </span>
              </div>
              <div
                class="uc-fe-menu-item c1"
              >
                <span
                  class="uc-fe-checkbox c2"
                >
                  <i
                    class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
                  />
                  <div
                    class="uc-fe-checkbox-content c6"
                  >
                    Menu 2
                  </div>
                </span>
              </div>
              <div
                class="uc-fe-menu-item c1"
              >
                <span
                  class="uc-fe-checkbox c2"
                >
                  <i
                    class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
                  />
                  <div
                    class="uc-fe-checkbox-content c6"
                  >
                    Menu 3
                  </div>
                </span>
              </div>
              <div
                class="uc-fe-menu-item c1"
              >
                <span
                  class="uc-fe-checkbox c2"
                >
                  <i
                    class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
                  />
                  <div
                    class="uc-fe-checkbox-content c6"
                  >
                    Menu 4
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c7"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c8"
                >
                  SubMenu 2
                  <i
                    class="uc-fe-icon icon__up c9 c5"
                  />
                </div>
              </div>
            </div>
            <div
              class=""
              open=""
            >
              <span
                class="uc-fe-menu-selectall-checkbox c10 uc-fe-checkbox c2"
              >
                <i
                  class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
                />
                <div
                  class="uc-fe-checkbox-content c6"
                >
                  全选
                </div>
              </span>
              <div
                class="uc-fe-menu-item c1"
              >
                <span
                  class="uc-fe-checkbox c2"
                >
                  <i
                    class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
                  />
                  <div
                    class="uc-fe-checkbox-content c6"
                  >
                    Menu 1
                  </div>
                </span>
              </div>
              <div
                class="uc-fe-menu-item c1"
              >
                <span
                  class="uc-fe-checkbox c2"
                >
                  <i
                    class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
                  />
                  <div
                    class="uc-fe-checkbox-content c6"
                  >
                    Menu 2
                  </div>
                </span>
              </div>
              <div
                class="uc-fe-menu-item c1"
              >
                <span
                  class="uc-fe-checkbox c2"
                >
                  <i
                    class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
                  />
                  <div
                    class="uc-fe-checkbox-content c6"
                  >
                    Menu 3
                  </div>
                </span>
              </div>
              <div
                class="uc-fe-menu-item c1"
              >
                <span
                  class="uc-fe-checkbox c2"
                >
                  <i
                    class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
                  />
                  <div
                    class="uc-fe-checkbox-content c6"
                  >
                    Menu 4
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c7"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c8"
                >
                  SubMenu 3
                  <i
                    class="uc-fe-icon icon__down c9 c5"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
          />
          <div
            class="uc-fe-checkbox-content c6"
          >
            Menu 1
          </div>
        </span>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c7"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c8"
                >
                  SubMenu 1
                  <i
                    class="uc-fe-icon icon__down c9 c5"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c7"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c8"
                >
                  SubMenu 2
                  <i
                    class="uc-fe-icon icon__down c9 c5"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c7"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c8"
                >
                  SubMenu 3
                  <i
                    class="uc-fe-icon icon__down c9 c5"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu demo -- menu-controlled 1`] = `
.c5 {
  vertical-align: baseline;
}

.c4 {
  margin-right: 8px;
  font-size: 14px;
  vertical-align: middle;
}

.c7 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  font-size: 12px;
}

.c7:hover .c3 {
  color: #3860f4;
}

.c7 .c3 {
  line-height: 28px;
  color: #d2d6ea;
}

.c2 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  font-size: 12px;
}

.c2:hover .c3 {
  color: #3860f4;
}

.c2 .c3 {
  line-height: 28px;
  color: #3357df;
}

.c6 {
  display: inline-block;
  vertical-align: middle;
}

.c1 {
  padding: 0 8px;
  margin: 0 8px;
  border-radius: 2px;
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c0 {
  line-height: 26px;
  font-size: 12px;
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
  border-style: none !important;
}

.c0,
.c0 .style__PopupContentWrap-ulx11w-2 {
  color: #0a1633;
  border: none;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.05),0 12px 32px -4px rgba(0,0,0,0.08),0 2px 17px -6px rgba(0,0,0,0.05);
  background: #ffffff;
}

.c0 .uc-fe-menu-item:hover,
.c0 .uc-fe-menu-submenu-title-content:hover,
.c0 .uc-fe-menu-selectall-checkbox:hover {
  background: #eaeefd;
}

.c0 .uc-fe-menu-item-selected,
.c0 .uc-fe-menu-submenu-title-selected,
.c0 .uc-fe-menu-selectall-checkbox-checked {
  color: #3860f4;
}

.c0 .uc-fe-menu-submenu-title-content-collapse {
  border-color: #d2d6ea;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-menu-item uc-fe-menu-item-selected c1"
        selected=""
      >
        <span
          checked=""
          class="uc-fe-checkbox c2"
        >
          <i
            class="uc-fe-icon icon__checkbox-ed c3 uc-fe-checkbox-icon c4 c5"
          />
          <div
            class="uc-fe-checkbox-content c6"
          >
            Menu 1
          </div>
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c7"
        >
          <i
            class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
          />
          <div
            class="uc-fe-checkbox-content c6"
          >
            Menu 2
          </div>
        </span>
      </div>
      <div
        class="uc-fe-menu-item uc-fe-menu-item-selected c1"
        selected=""
      >
        <span
          checked=""
          class="uc-fe-checkbox c2"
        >
          <i
            class="uc-fe-icon icon__checkbox-ed c3 uc-fe-checkbox-icon c4 c5"
          />
          <div
            class="uc-fe-checkbox-content c6"
          >
            Menu 3
          </div>
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c7"
        >
          <i
            class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
          />
          <div
            class="uc-fe-checkbox-content c6"
          >
            Menu 4
          </div>
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-menu-item uc-fe-menu-item-selected c1"
        selected=""
      >
        <span
          checked=""
          class="uc-fe-checkbox c2"
        >
          <i
            class="uc-fe-icon icon__checkbox-ed c3 uc-fe-checkbox-icon c4 c5"
          />
          <div
            class="uc-fe-checkbox-content c6"
          >
            Menu 1
          </div>
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c7"
        >
          <i
            class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
          />
          <div
            class="uc-fe-checkbox-content c6"
          >
            Menu 2
          </div>
        </span>
      </div>
      <div
        class="uc-fe-menu-item uc-fe-menu-item-selected c1"
        selected=""
      >
        <span
          checked=""
          class="uc-fe-checkbox c2"
        >
          <i
            class="uc-fe-icon icon__checkbox-ed c3 uc-fe-checkbox-icon c4 c5"
          />
          <div
            class="uc-fe-checkbox-content c6"
          >
            Menu 3
          </div>
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c7"
        >
          <i
            class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
          />
          <div
            class="uc-fe-checkbox-content c6"
          >
            Menu 4
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu demo -- menu-multiple 1`] = `
.c5 {
  vertical-align: baseline;
}

.c4 {
  margin-right: 8px;
  font-size: 14px;
  vertical-align: middle;
}

.c2 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  font-size: 12px;
}

.c2:hover .c3 {
  color: #3860f4;
}

.c2 .c3 {
  line-height: 28px;
  color: #d2d6ea;
}

.c7:hover .c3 {
  color: #3860f4;
}

.c7 .c3 {
  line-height: 28px;
  color: #3357df;
}

.c6 {
  display: inline-block;
  vertical-align: middle;
}

.c1 {
  padding: 0 8px;
  margin: 0 8px;
  border-radius: 2px;
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c0 {
  line-height: 26px;
  font-size: 12px;
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
  border-style: none !important;
}

.c0,
.c0 .style__PopupContentWrap-ulx11w-2 {
  color: #0a1633;
  border: none;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.05),0 12px 32px -4px rgba(0,0,0,0.08),0 2px 17px -6px rgba(0,0,0,0.05);
  background: #ffffff;
}

.c0 .uc-fe-menu-item:hover,
.c0 .uc-fe-menu-submenu-title-content:hover,
.c0 .uc-fe-menu-selectall-checkbox:hover {
  background: #eaeefd;
}

.c0 .uc-fe-menu-item-selected,
.c0 .uc-fe-menu-submenu-title-selected,
.c0 .uc-fe-menu-selectall-checkbox-checked {
  color: #3860f4;
}

.c0 .uc-fe-menu-submenu-title-content-collapse {
  border-color: #d2d6ea;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 1
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 2
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 3
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 4
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
          />
          <div
            class="uc-fe-checkbox-content c6"
          >
            Menu 1
          </div>
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
          />
          <div
            class="uc-fe-checkbox-content c6"
          >
            Menu 2
          </div>
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
          />
          <div
            class="uc-fe-checkbox-content c6"
          >
            Menu 3
          </div>
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
          />
          <div
            class="uc-fe-checkbox-content c6"
          >
            Menu 4
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu demo -- menu-selectable 1`] = `
.c5 {
  vertical-align: baseline;
}

.c4 {
  margin-right: 8px;
  font-size: 14px;
  vertical-align: middle;
}

.c2 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  font-size: 12px;
}

.c2:hover .c3 {
  color: #3860f4;
}

.c2 .c3 {
  line-height: 28px;
  color: #d2d6ea;
}

.c7:hover .c3 {
  color: #3860f4;
}

.c7 .c3 {
  line-height: 28px;
  color: #3357df;
}

.c6 {
  display: inline-block;
  vertical-align: middle;
}

.c1 {
  padding: 0 8px;
  margin: 0 8px;
  border-radius: 2px;
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c0 {
  line-height: 26px;
  font-size: 12px;
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
  border-style: none !important;
}

.c0,
.c0 .style__PopupContentWrap-ulx11w-2 {
  color: #0a1633;
  border: none;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.05),0 12px 32px -4px rgba(0,0,0,0.08),0 2px 17px -6px rgba(0,0,0,0.05);
  background: #ffffff;
}

.c0 .uc-fe-menu-item:hover,
.c0 .uc-fe-menu-submenu-title-content:hover,
.c0 .uc-fe-menu-selectall-checkbox:hover {
  background: #eaeefd;
}

.c0 .uc-fe-menu-item-selected,
.c0 .uc-fe-menu-submenu-title-selected,
.c0 .uc-fe-menu-selectall-checkbox-checked {
  color: #3860f4;
}

.c0 .uc-fe-menu-submenu-title-content-collapse {
  border-color: #d2d6ea;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
          />
          <div
            class="uc-fe-checkbox-content c6"
          >
            Menu 1
          </div>
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
          />
          <div
            class="uc-fe-checkbox-content c6"
          >
            Menu 2
          </div>
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
          />
          <div
            class="uc-fe-checkbox-content c6"
          >
            Menu 3
          </div>
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
          />
          <div
            class="uc-fe-checkbox-content c6"
          >
            Menu 4
          </div>
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
          />
          <div
            class="uc-fe-checkbox-content c6"
          >
            Menu 1
          </div>
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
          />
          <div
            class="uc-fe-checkbox-content c6"
          >
            Menu 2
          </div>
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
          />
          <div
            class="uc-fe-checkbox-content c6"
          >
            Menu 3
          </div>
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
          />
          <div
            class="uc-fe-checkbox-content c6"
          >
            Menu 4
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu demo -- menu-showSelectAll 1`] = `
.c5 {
  vertical-align: baseline;
}

.c4 {
  margin-right: 8px;
  font-size: 14px;
  vertical-align: middle;
}

.c2 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  font-size: 12px;
}

.c2:hover .c3 {
  color: #3860f4;
}

.c2 .c3 {
  line-height: 28px;
  color: #d2d6ea;
}

.c12:hover .c3 {
  color: #3860f4;
}

.c12 .c3 {
  line-height: 28px;
  color: #3357df;
}

.c6 {
  display: inline-block;
  vertical-align: middle;
}

.c9 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -0.5em;
  font-size: 14px;
}

.c1 {
  padding: 0 8px;
  margin: 0 8px;
  border-radius: 2px;
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c7 {
  padding: 0 8px;
  border-radius: 2px;
  display: block;
  cursor: pointer;
}

.c8 {
  padding: 0 8px;
  padding-right: 40px;
  position: relative;
  border-bottom: 1px solid;
  margin: 8px 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c10 {
  padding: 0 8px;
  padding-right: 40px;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c11 {
  padding: 0 8px;
  margin: 0 8px;
  border-radius: 2px;
  display: block;
  cursor: pointer;
}

.c0 {
  line-height: 26px;
  font-size: 12px;
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
  border-style: none !important;
}

.c0,
.c0 .style__PopupContentWrap-ulx11w-2 {
  color: #0a1633;
  border: none;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.05),0 12px 32px -4px rgba(0,0,0,0.08),0 2px 17px -6px rgba(0,0,0,0.05);
  background: #ffffff;
}

.c0 .uc-fe-menu-item:hover,
.c0 .uc-fe-menu-submenu-title-content:hover,
.c0 .uc-fe-menu-selectall-checkbox:hover {
  background: #eaeefd;
}

.c0 .uc-fe-menu-item-selected,
.c0 .uc-fe-menu-submenu-title-selected,
.c0 .uc-fe-menu-selectall-checkbox-checked {
  color: #3860f4;
}

.c0 .uc-fe-menu-submenu-title-content-collapse {
  border-color: #d2d6ea;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
          />
          <div
            class="uc-fe-checkbox-content c6"
          >
            Menu 1
          </div>
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
          />
          <div
            class="uc-fe-checkbox-content c6"
          >
            Menu 2
          </div>
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
          />
          <div
            class="uc-fe-checkbox-content c6"
          >
            Menu 3
          </div>
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
          />
          <div
            class="uc-fe-checkbox-content c6"
          >
            Menu 4
          </div>
        </span>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c7"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c8"
                >
                  SubMenu 1
                  <i
                    class="uc-fe-icon icon__down c9 c5"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c7"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c8"
                >
                  SubMenu 2
                  <i
                    class="uc-fe-icon icon__down c9 c5"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div
            class="uc-fe-menu-submenu-title c7"
          >
            <div
              class="uc-fe-menu-submenu-title-content c10"
            >
              SubMenu 3
              <i
                class="uc-fe-icon icon__caret-right c9 c5"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="uc-fe-menu-selectall-checkbox c11 uc-fe-checkbox c2"
      >
        <i
          class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
        />
        <div
          class="uc-fe-checkbox-content c6"
        >
          全选
        </div>
      </span>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
          />
          <div
            class="uc-fe-checkbox-content c6"
          >
            Menu 1
          </div>
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
          />
          <div
            class="uc-fe-checkbox-content c6"
          >
            Menu 2
          </div>
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
          />
          <div
            class="uc-fe-checkbox-content c6"
          >
            Menu 3
          </div>
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="uc-fe-icon icon__checkbox c3 uc-fe-checkbox-icon c4 c5"
          />
          <div
            class="uc-fe-checkbox-content c6"
          >
            Menu 4
          </div>
        </span>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c7"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c8"
                >
                  SubMenu 1
                  <i
                    class="uc-fe-icon icon__down c9 c5"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c7"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c8"
                >
                  SubMenu 2
                  <i
                    class="uc-fe-icon icon__down c9 c5"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div
            class="uc-fe-menu-submenu-title c7"
          >
            <div
              class="uc-fe-menu-submenu-title-content c10"
            >
              SubMenu 3
              <i
                class="uc-fe-icon icon__caret-right c9 c5"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 1
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 2
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 3
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 4
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c7"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c8"
                >
                  SubMenu 1
                  <i
                    class="uc-fe-icon icon__down c9 c5"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c7"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c8"
                >
                  SubMenu 2
                  <i
                    class="uc-fe-icon icon__down c9 c5"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div
            class="uc-fe-menu-submenu-title c7"
          >
            <div
              class="uc-fe-menu-submenu-title-content c10"
            >
              SubMenu 3
              <i
                class="uc-fe-icon icon__caret-right c9 c5"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 1
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 2
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 3
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 4
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c7"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c8"
                >
                  SubMenu 1
                  <i
                    class="uc-fe-icon icon__down c9 c5"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c7"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c8"
                >
                  SubMenu 2
                  <i
                    class="uc-fe-icon icon__down c9 c5"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div
            class="uc-fe-menu-submenu-title c7"
          >
            <div
              class="uc-fe-menu-submenu-title-content c10"
            >
              SubMenu 3
              <i
                class="uc-fe-icon icon__caret-right c9 c5"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu demo -- submenu-styleType 1`] = `
.c5 {
  vertical-align: baseline;
}

.c4 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -0.5em;
  font-size: 14px;
}

.c1 {
  padding: 0 8px;
  margin: 0 8px;
  border-radius: 2px;
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c2 {
  padding: 0 8px;
  border-radius: 2px;
  display: block;
  cursor: pointer;
}

.c3 {
  padding: 0 8px;
  padding-right: 40px;
  position: relative;
  border-bottom: 1px solid;
  margin: 8px 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c6 {
  padding: 0 8px;
  padding-right: 40px;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c0 {
  line-height: 26px;
  font-size: 12px;
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
  border-style: none !important;
}

.c0,
.c0 .style__PopupContentWrap-ulx11w-2 {
  color: #0a1633;
  border: none;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.05),0 12px 32px -4px rgba(0,0,0,0.08),0 2px 17px -6px rgba(0,0,0,0.05);
  background: #ffffff;
}

.c0 .uc-fe-menu-item:hover,
.c0 .uc-fe-menu-submenu-title-content:hover,
.c0 .uc-fe-menu-selectall-checkbox:hover {
  background: #eaeefd;
}

.c0 .uc-fe-menu-item-selected,
.c0 .uc-fe-menu-submenu-title-selected,
.c0 .uc-fe-menu-selectall-checkbox-checked {
  color: #3860f4;
}

.c0 .uc-fe-menu-submenu-title-content-collapse {
  border-color: #d2d6ea;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 1
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 2
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 3
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 4
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c2"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c3"
                >
                  SubMenu 1 - default
                  <i
                    class="uc-fe-icon icon__down c4 c5"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c2"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c3"
                >
                  SubMenu 2 - collapse
                  <i
                    class="uc-fe-icon icon__down c4 c5"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div
            class="uc-fe-menu-submenu-title c2"
          >
            <div
              class="uc-fe-menu-submenu-title-content c6"
            >
              SubMenu 3 - popover
              <i
                class="uc-fe-icon icon__caret-right c4 c5"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu demo -- submenu-title 1`] = `
.c5 {
  vertical-align: baseline;
}

.c6 {
  vertical-align: baseline;
}

.c6.c6.c6 {
  -webkit-animation: iVXCSc 1.2s infinite linear;
  animation: iVXCSc 1.2s infinite linear;
  line-height: normal;
}

.c4 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -0.5em;
  font-size: 14px;
}

.c1 {
  padding: 0 8px;
  margin: 0 8px;
  border-radius: 2px;
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c2 {
  padding: 0 8px;
  border-radius: 2px;
  display: block;
  cursor: pointer;
}

.c3 {
  padding: 0 8px;
  padding-right: 40px;
  position: relative;
  border-bottom: 1px solid;
  margin: 8px 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c0 {
  line-height: 26px;
  font-size: 12px;
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
  border-style: none !important;
}

.c0,
.c0 .style__PopupContentWrap-ulx11w-2 {
  color: #0a1633;
  border: none;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.05),0 12px 32px -4px rgba(0,0,0,0.08),0 2px 17px -6px rgba(0,0,0,0.05);
  background: #ffffff;
}

.c0 .uc-fe-menu-item:hover,
.c0 .uc-fe-menu-submenu-title-content:hover,
.c0 .uc-fe-menu-selectall-checkbox:hover {
  background: #eaeefd;
}

.c0 .uc-fe-menu-item-selected,
.c0 .uc-fe-menu-submenu-title-selected,
.c0 .uc-fe-menu-selectall-checkbox-checked {
  color: #3860f4;
}

.c0 .uc-fe-menu-submenu-title-content-collapse {
  border-color: #d2d6ea;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 1
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 2
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 3
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 4
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c2"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c3"
                >
                  SubMenu 1
                  <i
                    class="uc-fe-icon icon__down c4 c5"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c2"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c3"
                >
                  <i
                    class="uc-fe-icon icon__loading uc-fe-icon-spin c6"
                  />
                  <i
                    class="uc-fe-icon icon__down c4 c5"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
